<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_nav_library"
        android:title="@string/nav_library" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_nav_favorites"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
